อัพเดตค่า ,ปรับโครงสร้าง ,ปรับส่วนการ running sort
