# docs/swagger.json
@@ -567,10 +567,6 @@
         "arczed_internal_entities_models.Users": {
             "type": "object",
             "properties": {
-                "birth_day": {
-                    "description": "วันเกิด",
-                    "type": "string"
-                },
                 "created_at": {
                     "description": "วันที่สร้าง",
                     "type": "string"
@@ -636,7 +632,7 @@
                 },
                 "user_id": {
                     "description": "ไอดี ของผู้ใช้งาน",
-                    "type": "string"
+                    "type": "integer"
                 }
             }
         },
@@ -683,17 +679,16 @@
                 },
                 "userID": {
                     "description": "ต้องกำหนดประเภทและขนาดให้ตรงกับ Users.UserId",
-                    "type": "string"
+                    "type": "integer"
                 }
             }
         },
         "arczed_internal_entities_schemas.AddUsers": {
             "type": "object",
+            "required": [
+                "email"
+            ],
             "properties": {
-                "birth_day": {
-                    "description": "วันเกิด",
-                    "type": "string"
-                },
                 "email": {
                     "description": "อีเมล",
                     "type": "string"
@@ -720,7 +715,7 @@
                 },
                 "user_id": {
                     "description": "ผู้ใช้งาน",
-                    "type": "string"
+                    "type": "integer"
                 }
             }
         },
@@ -774,13 +769,17 @@
         },
         "arczed_internal_entities_schemas.LoginReq": {
             "type": "object",
+            "required": [
+                "email",
+                "password"
+            ],
             "properties": {
-                "password": {
-                    "description": "รหัสผ่าน",
+                "email": {
+                    "description": "ผู้ใช้งาน",
                     "type": "string"
                 },
-                "user_id": {
-                    "description": "ผู้ใช้งาน",
+                "password": {
+                    "description": "รหัสผ่าน",
                     "type": "string"
                 }
             }
